@@ -6,7 +6,7 @@
 # 
 # EDIT THIS FILE WITH CAUTION  (ntp-keygen-opts.texi)
 # 
-# It has been AutoGen-ed  Tuesday November 27, 2007 at 06:44:48 AM EST
+# It has been AutoGen-ed  Wednesday December  5, 2007 at 01:53:58 AM EST
 # From the definitions    ntp-keygen-opts.def
 # and the template file   aginfo.tpl
 @end ignore
@@ -90,7 +90,7 @@ or by a single hyphen and the flag character.
 
 The following option preset mechanisms are supported:
  - reading file /users/stenn/.ntprc
- - reading file /deacon/backroom/snaps/ntp-dev/util/.ntprc
+ - reading file /deacon/backroom/ntp-dev/util/.ntprc
  - examining environment variables named NTP_KEYGEN_*
 
 If there is no new host key, look for an existing one.
@@ -158,7 +158,7 @@ but each overrides the previous value(s).
 @subsection id-key option (-e)
 @cindex ntp-keygen-id-key
 
-This is the ``write identity keys'' option.
+This is the ``write iff or gq identity keys'' option.
 
 This option has some usage constraints.  It:
 @itemize @bullet
@@ -166,7 +166,7 @@ This option has some usage constraints.  It:
 must be compiled in by defining @code{OPENSSL} during the compilation.
 @end itemize
 
-Write the IFF client keys to the standard output.  This is
+Write the IFF or GQ client keys to the standard output.  This is
 intended for automatic key distribution by mail.
 
 @node ntp-keygen gq-params
