@@ -1,7 +1,7 @@
-.TH NTP-KEYGEN 1 2007-11-27 "(ntp 4.2.5p104)" "Programmer's Manual"
+.TH NTP-KEYGEN 1 2007-12-05 "(ntp 4.2.5p104)" "Programmer's Manual"
 .\"  EDIT THIS FILE WITH CAUTION  (ntp-keygen.1)
 .\"  
-.\"  It has been AutoGen-ed  Tuesday November 27, 2007 at 06:44:47 AM EST
+.\"  It has been AutoGen-ed  Wednesday December  5, 2007 at 01:53:57 AM EST
 .\"  From the definitions    ntp-keygen-opts.def
 .\"  and the template file   agman1.tpl
 .\"
@@ -45,9 +45,9 @@ Set the output debugging level.  Can be supplied multiple times,
 but each overrides the previous value(s).
 .TP
 .BR \-e ", " \--id-key
-Write identity keys.
+Write IFF or GQ identity keys.
 .sp
-Write the IFF client keys to the standard output.  This is
+Write the IFF or GQ client keys to the standard output.  This is
 intended for automatic key distribution by mail.
 .TP
 .BR \-G ", " \--gq-params
